Fix Java16 compile and test issues.
Does this addon need shade plugin?